--- a/src/icm42688/icm42688reg.yaml
+++ b/src/icm42688/icm42688reg.yaml
@@ -187,6 +187,37 @@
         type: c_uint8
         length: 4
 
+  - name: GYRO_CONFIG0
+    address: 0x51
+    type: R/W
+    fields:
+      # Temperature filter bandwidth
+      - name: TEMP_FILT_BW
+        type: c_uint8
+        length: 3
+      # Reserved field
+      - name: RESV
+        type: c_uint8
+        length:  1
+      # Gyro UI filter order
+      - name: GYRO_UI_FILT_ORD
+        type: c_uint8
+        length: 2
+      # Gyro 
+
+  - name: GYRO_ACCEL_CONFIG0
+    address: 0x52
+    type: R/W
+    fields:
+      # Accel UI filter bandwidth
+      - name: ACCEL_UI_FILT_BW
+        type: c_uint8
+        length: 4
+      # Gyro UI filter bandwidth
+      - name: GYRO_UI_FILT_BW
+        type: c_uint8
+        length: 4
+
   - name: WHO_AM_I
     address: 0x75
     type: R
@@ -229,3 +260,47 @@
       - name: XA_DISABLE
         type: c_uint8
         length: 1
+
+- # Bank 2
+
+- # Bank 3
+  - name: OFFSET_USER
+    address: 0x77
+    type: R/W
+    fields:
+    - name: GYRO_X_OFFUSER_LOWER
+      type: c_uint8
+      length: 8
+    - name: GYRO_Y_OFFUSER_UPPER
+      type: c_uint8
+      length: 4
+    - name: GYRO_X_OFFUSER_UPPER
+      type: c_uint8
+      length: 4
+    - name: GYRO_Y_OFFUSER_LOWER
+      type: c_uint8
+      length: 8
+    - name: GYRO_Z_OFFUSER_LOWER
+      type: c_uint8
+      length: 8
+    - name: ACCEL_X_OFFUSER_UPPER
+      type: c_uint8
+      length: 4
+    - name: GYRO_Z_OFFUSER_UPPER
+      type: c_uint8
+      length: 4
+    - name: ACCEL_X_OFFUSER_LOWER
+      type: c_uint8
+      length: 8
+    - name: ACCEL_Y_OFFUSER_UPPER
+      type: c_uint8
+      length: 8
+    - name: ACCEL_Z_OFFUSER_UPPER
+      type: c_uint8
+      length: 4
+    - name: ACCEL_Y_OFFUSER_UPPER
+      type: c_uint8
+      length: 4
+    - name: ACCEL_Z_OFFUSER_LOWER
+      type: c_uint8
+      length: 8
