--- a/src/icm42688/icm42688reg.yaml
+++ b/src/icm42688/icm42688reg.yaml
@@ -187,7 +187,7 @@
         type: c_uint8
         length: 4
 
-  - name: GYRO_CONFIG0
+  - name: GYRO_CONFIG1
     address: 0x51
     type: R/W
     fields:
@@ -203,7 +203,10 @@
       - name: GYRO_UI_FILT_ORD
         type: c_uint8
         length: 2
-      # Gyro 
+      # Gyro DEC2_M2 filter order
+      - name: GYRO_DEC2_M2_ORD
+        type: c_uint8
+        length: 2
 
   - name: GYRO_ACCEL_CONFIG0
     address: 0x52
@@ -217,6 +220,52 @@
       - name: GYRO_UI_FILT_BW
         type: c_uint8
         length: 4
+
+  - name: ACCEL_CONFIG1
+    address: 0x53
+    type: R/W
+    fields:
+      # Reserved field
+      - name: RESV1
+        type: c_uint8
+        length: 3
+      # Order of accel UI filter
+      - name: ACCEL_UI_FILT_ORD
+        type: c_uint8
+        length: 2
+      # Order of accel DEC2_M2 filter
+      - name: ACCEL_DEC2_M2_ORD
+        type: c_uint8
+        length: 2
+      # Reserved field
+      - name: RESV0
+        type: c_uint8
+        length: 1
+
+  - name: FSYNC_CONFIG
+    address: 0x62
+    type: R/W
+    fields:
+      # Reserved field
+      - name: RESV1
+        type: c_uint8
+        length: 1
+      # FSYNC flag tag
+      - name: FSYNC_UI_SEL
+        type: c_uint8
+        length: 3
+      # Reserved field
+      - name: RESV0
+        type: c_uint8
+        length: 2
+      # FSYNC flag clear selection
+      - name: FSYNC_UI_FLAG_CLEAR_SEL
+        type: c_uint8
+        length: 1
+      # FSYNC flag polarity
+      - name: FSYNC_POLARITY
+        type: c_uint8
+        length: 1
 
   - name: WHO_AM_I
     address: 0x75
@@ -264,6 +313,8 @@
 - # Bank 2
 
 - # Bank 3
+
+- # Bank 4
   - name: OFFSET_USER
     address: 0x77
     type: R/W
