--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,6 @@ include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+imc42688 = ["*.yaml"]
