--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "maslab-lib"
 description = "MASLAB Python library for controlling hardwares"
 authors = [{name = "MASLAB 2025 Staff", email = "maslab-2025-staff@mit.edu"}]
-version = "0.0.0+auto.0"
+version = "0.0.1"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
